--- a/_posts/2019-04-18-第一篇章.md
+++ b/_posts/2019-04-18-第一篇章.md
@@ -4,4 +4,6 @@ title:  "第一篇章"
 date:   2019-04-18 19:21:17 +0800
 categories: 个人博客
 ---
-暂无内容
+## 逝者如斯夫
+&emsp;&emsp;17年7月28日，离开了自己心心念念想要离开的地方。怀揣着无数梦想，一头扎进了如今的世界里。<br>
+&emsp;&emsp;曾以为从此仗剑天涯，谁与争锋？不料英雄气短，世事无常，想来自己已经转行几近二载。时常思量，仍是一无所长。究其根本之原因，大多源于自己不爱深究问题之本源，大多时候是马马虎虎，得过且过。不愿总结记录，如今，痛定思痛，撰写此文，汝当铭记。
