--- a/_posts/2019-04-19-Mac下mysql安装.md
+++ b/_posts/2019-04-19-Mac下mysql安装.md
@@ -7,12 +7,13 @@ categories: mysql
 ## mysql安装
 Home-brew 安装mysql
 
-	1、安装：sunyichaodeMacBook-Pro:~ sunyichao$ brew install mysql
+	1、安装：xiaolineMacBook:~ sunyichao$ brew install mysql
 	2、开启mysql：mysql.server start
-	3、使用mysql的配置脚本：/usr/local/opt/mysql/bin/mysql_secure_installation //mysql 提供的配置向导启动这个脚本后，即可根据如下命令提示进行初始化设置
+	3、使用mysql的配置脚本：/usr/local/opt/mysql/bin/mysql_secure_installation //mysql 
+		提供的配置向导启动这个脚本后，即可根据如下命令提示进行初始化设置
 	4、使用客户端联系时提示密码协议错误
 		ALTER USER 'root'@'localhost' IDENTIFIED BY 'your-password’;
-	5.启动命令：
+	5、启动命令：
 		mysql.server start
 		mysql.server stop 
 		mysql.server restart
