--- a/_posts/2019-04-19-Mac下mysql安装.md
+++ b/_posts/2019-04-19-Mac下mysql安装.md
@@ -7,7 +7,8 @@ categories: mysql
 ## mysql安装
 Home-brew 安装mysql
 
-	1、安装：xiaolineMacBook:~ sunyichao$ brew install mysql
+
+	1安装：xiaolineMacBook:~ sunyichao$ brew install mysql
 	2、开启mysql：mysql.server start
 	3、使用mysql的配置脚本：/usr/local/opt/mysql/bin/mysql_secure_installation //mysql 
 		提供的配置向导启动这个脚本后，即可根据如下命令提示进行初始化设置
